fixed button permanent focus on mobile devices and playing when button is clicked

--- a/index.css
+++ b/index.css
@@ -60,6 +60,7 @@ body {
 }
 
 .key {
+  cursor: pointer;
   text-align: center;
   padding: 1rem;
   background-color: var(--clr-transparent-400);
@@ -68,15 +69,20 @@ body {
   transition: all 0.07s ease;
 }
 
-.playing,
-.key:hover,
-.key:focus-visible {
+.playing {
   cursor: pointer;
   scale: 1.05;
   background-color: var(--clr-transparent-600);
   box-shadow: 0 0 0.5rem 0 var(--clr-highlight);
+  border: 3px solid var(--clr-highlight);
 }
 
-.playing {
-  border: 3px solid var(--clr-highlight);
+/* When hover is support, to avoid smartphones */
+@media (hover: hover) {
+  .key:hover,
+  .key:focus-visible {
+    scale: 1.05;
+    background-color: var(--clr-transparent-600);
+    box-shadow: 0 0 0.5rem 0 var(--clr-highlight);
+  }
 }
